# weamyl-metcap

./: .gitignore  Dockerfile  README.md  docker-compose.yml  local-dev-docker-compose.yml  local-dev-initialize-database.sh
app/: pyproject.toml  run.sh
app/app/: main.py
app/app/api/api_v1/: api.py
app/app/api/api_v1/endpoints/: cap.py  map.py  misc.py
app/app/core/: common.py  config.py  search.py  wcommon.py  wsearch.py
app/app/db/: database.py
demo/cap/: junk.json  list.sh  query-cap-00.geojson  query-cap-01.geojson  query-cap-polygon-august-Yellow.geojson  query-cap-polygon-june-Yellow-1500f.geojson  res-query-cap-00b-2.49.0.1.578.0.20220615070509.geojson  res-query-cap-00c-2.49.0.1.578.0.20220710094104.geojson  res-query-cap-00d-2.49.0.1.578.0.20220614095614.geojson  res-query-cap-polygon-2.49.0.1.578.0.20220527101842.geojson  res-query-cap-polygon-2.49.0.1.578.0.20220624093218.geojson  res-query-cap-polygon-2.49.0.1.578.0.20220624101914.geojson  res-query-cap-polygon-2.49.0.1.578.0.20220625094437.geojson  res-query-cap-polygon-2.49.0.1.578.0.20220627103815.geojson  res-query-cap-polygon-2.49.0.1.578.0.20220723142521.geojson  res-query-cap-polygon-august-Yellow-2.49.0.1.578.0.20220802101753.geojson  res-query-cap-polygon-august-Yellow-list.txt  res-query-cap-polygon-list.txt
scripts/: import_cap.py  junk.py  kartverketToCouchdb.py  kvToCouch.py  local-data-import.py  local-db-initialize.py  local-dev-kartverketToCouchdb.py  local-dev-metno-custom-couchdb.py  lustre_archive_importer.py  metno-custom-couchdb.py  metnoToCouch.py  updateCouchDB.py  views.py
(+28994 files in other folders)
